--- a/html/home.html
+++ b/html/home.html
@@ -3,10 +3,11 @@
 <head>
 	
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>My Portfolio</title>
 
    <link rel="stylesheet" type="text/css" href="../css/homeStyle.css">
-
+<link href="https://fonts.googleapis.com/css?family=Skranji&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -15,10 +16,26 @@
 	<h2 class="headingPosition">My PortFolio</h2>
 	<h3 class="namePosition">Kavi Kumar</h3>
 	<a class="leftLink" href="personal.html">Personal</a>
-	<a class="rightLink" href="">Professional</a>
+	<a class="rightLink" href="Professional.html">Professional</a>
 
 </div>
 
+<div class="row">
+	
+   <center>
+		<h1 style="color: #fff; font-family: 'Skranji', cursive;"> Contact Info </h1>	
+	</center> 
+
+	<center>
+	<div>
+		<img src="../images/insta.jpg" class="size">
+		<img src="../images/facebook.png" class="size">
+		<img src="../images/whatsapp.png" class="size">
+		<img src="../images/mail.png" class="size">
+	</div>
+</center>
+
+</div>
 
 
 </body>
