--- a/html/personal.html
+++ b/html/personal.html
@@ -3,22 +3,47 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="../css/personalStyle.css">
+	<link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
 	<title></title>
 </head>
 <body>
 
 	<div class="container">
 
-	<div>
-		<img src="../images/homeBackground2.jpg" alt="Avatar" class="roundedImage">
-		<h2 class="headText">Helloo</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus aspernatur fugit alias, dolore aliquid sit consequuntur libero, adipisci ipsum quas, optio temporibus. Architecto quisquam animi vel sed id, numquam at!</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim consequuntur vero molestiae nisi sint. Aperiam, nobis quas, impedit suscipit, sunt asperiores ut laboriosam eius aut corrupti similique, ipsam accusamus tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae rerum ullam aliquid, placeat eaque neque, fugiat! Fugiat, aliquam. Vel perferendis dolor, sint, sit fuga incidunt vitae pariatur id est nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum sint reiciendis cumque quo perferendis. Officiis illum laborum facere distinctio autem eius quos animi, obcaecati consectetur unde ab sint mollitia, voluptatem.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam iusto, molestiae omnis nihil asperiores harum voluptatibus recusandae hic id repellendus. Ipsam voluptates accusamus eveniet ab exercitationem sunt adipisci nisi eligendi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis laborum, molestiae sit aspernatur, repellendus perspiciatis? Modi deleniti voluptate magnam, dignissimos esse impedit deserunt animi ipsum eaque molestias! Deserunt, mollitia molestiae?</p>
+	<div class="box">
+		<img src="../images/hash2.jpg" alt="Avatar" class="roundedImage">
+		<h2 class="headText"> Hello<br>  &nbsp  &nbsp  &nbsp People  </h2>
+		<p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus aspernatur fugit alias, dolore aliquid sit consequuntur libero, adipisci ipsum quas, optio temporibus. Architecto quisquam animi vel sed id, numquam at!</p>
+		<p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim consequuntur vero molestiae nisi sint. Aperiam, nobis quas, impedit suscipit, sunt asperiores ut laboriosam eius aut corrupti similique, ipsam accusamus tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae rerum ullam aliquid, placeat eaque neque, fugiat! Fugiat, aliquam. Vel perferendis dolor, sint, sit fuga incidunt vitae pariatur id est nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum sint reiciendis cumque quo perferendis. Officiis illum laborum facere distinctio autem eius quos animi, obcaecati consectetur unde ab sint mollitia, voluptatem.</p>
+		<p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam iusto, molestiae omnis nihil asperiores harum voluptatibus recusandae hic id repellendus. Ipsam voluptates accusamus eveniet ab exercitationem sunt adipisci nisi eligendi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis laborum, molestiae sit aspernatur, repellendus perspiciatis? Modi deleniti voluptate magnam, dignissimos esse impedit deserunt animi ipsum eaque molestias! Deserunt, mollitia molestiae?</p>
 	</div>
 	   
 		
-	</div>
+	
+	<div class="box">
+		<h1 class="headin">Hobbies & Interests</h1>
+		<ul>
+		  <li>
+			<p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus aspernatur fugit alias, dolore aliquid sit consequuntur libero, adipisci ipsum quas, optio temporibus. Architecto quisquam animi vel sed id, numquam at!</p>
+		  </li>
+		  <li>
+			<p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus aspernatur fugit alias, dolore aliquid sit consequuntur libero, adipisci ipsum quas, optio temporibus. Architecto quisquam animi vel sed id, numquam at!</p>
+		  </li>
+		  <li>
+			<p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus aspernatur fugit alias, dolore aliquid sit consequuntur libero, adipisci ipsum quas, optio temporibus. Architecto quisquam animi vel sed id, numquam at!</p>
+		  </li>
+		  <li>
+			<p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus aspernatur fugit alias, dolore aliquid sit consequuntur libero, adipisci ipsum quas, optio temporibus. Architecto quisquam animi vel sed id, numquam at!</p>
+		  </li>
+		  <li>
+			<p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus aspernatur fugit alias, dolore aliquid sit consequuntur libero, adipisci ipsum quas, optio temporibus. Architecto quisquam animi vel sed id, numquam at!</p>
+		  </li>
+	</ul>
+	   
+		
+</div>
+</div>
+
 
 </body>
 </html>
