added js animation but not responsive

--- a/html/home.html
+++ b/html/home.html
@@ -29,6 +29,7 @@
     <li> <a href="Professional.html">Professional</a> </li> 
     <li> <a  href="#CJ7">Contact</a> </li>
     <li> <a  href="#CJ">About Me</a> </li>
+    <li> <a href="jsAnimation.html"> JS Animation </a> </li>
 
    </ul>
 
